# footnote

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  conductor.json  gemini-extension.json  skill-bundles.yaml
cli/: .gitignore  README.md  V0-SHIP-REPORT.md  hatch_build.py  pyproject.toml
cli/benchmarks/: cli_help_results.json  fno_in_target_results.json  measure_cli_help.py  measure_fno_in_target.py  test_measure_fno.py
cli/scripts/: check-prompt-drift.sh  list_misscoped_graph_nodes.py  migrate_source_field.py
cli/scripts/dogfood-e2e/: dogfood-driver.sh  forgery-test.sh  init-session.sh  pick-target.sh  record-transcript.sh
cli/scripts/smoke/: capture-codex-jsonl.sh  capture-gemini-json.sh  capture-readiness-grid.sh  pty-survival-decision.md  pty-survival-findings.md  validate-mcp-channel.sh
cli/src/fno/: __init__.py  _compat_env.py  _flag_aliases.py  _lazy_group.py  _subprocess_util.py  active_backlog.py  agent_progress.py  cli.py  config_cli.py  config_io.py  conftest.py  dispatch.py  doctor.py  env_file.py  harness_identity.py  health_monitor.py  ledger_join.py  lint_cli.py  lint_shellout_drift.py  log_cmd.py  loops.py  megawalk.py  megawalk_tui.py  mutex.py  paths.py  paths_cli.py  paths_testing.py  paths_verify.py  post_merge_route.py  recovery.py  restart.py  route_cli.py  route_resolve.py  setup_cli.py  sigma_dispatch.py  status_fanout.py  stub_manifest.py  target_cli.py  test_cmd.py  test_cost.py  (+11 more)
cli/tests/: conftest.py  test_confidence_scorer_claude.py  test_config_schema_drift.py  test_direct_finalize_rung.py  test_done_cross_check.py  test_exit_codes.py  test_help_shorthands.py  test_lazy_imports.py  test_menu_caps_lint.py  test_mux_shell_integration.py  test_no_hardcoded_node_id.py  test_no_stale_deleted_capture_refs.py  test_node_claim_release_authority.py  test_plan_migrate.py  test_plan_schema_drift.py  test_post_merge_dispatch.py  test_post_merge_route.py  test_pr_sync_canonical.py  test_pr_watch_cli_adapters.py  test_pr_watch_decide.py  test_pr_watch_dispatch.py  test_pr_watch_install.py  test_pr_watch_sigma2.py  test_recovery.py  test_review_cache.py  test_review_locking.py  test_review_sigint.py  test_shim_roadmap_tasks.py  test_short_flag_convention.py  test_short_flag_dispatch.py  test_spawn_guard.py  test_status_fanout.py  test_truth_status.py  test_two_spelling_dispatch.py  test_v2_paths.py
cli/tests/agents/: _fake_claude.py  conftest.py  test_a2a_confirm.py  test_agents_top.py  test_ask_e2e_dispatch.py  test_bus_group1_task11.py  test_chat_single_writer.py  test_chat_switchboard.py  test_claude_parse_short_id.py  test_claude_session_registry.py  test_cli.py  test_cli_help.py  test_cli_lifecycle.py  test_cli_list_logs.py  test_cli_yolo_e2e.py  test_cmd_ask.py  test_codex_fatal_error_dispatch.py  test_codex_flock_parallel.py  test_codex_integration_smoke.py  test_codex_signal_handling.py  test_context.py  test_crown.py  test_discover.py  test_dispatch.py  test_dispatch_ask.py  test_dispatch_attribution.py  test_dispatch_codex.py  test_dispatch_gemini.py  test_dispatch_gemini_lifecycle.py  test_dispatch_lifecycle.py  test_dispatch_lifecycle_polish.py  test_dispatch_mcp_route.py  test_dispatch_rm_teardown.py  test_dispatch_spawn.py  test_dispatch_workdir.py  test_drive_authority.py  test_events.py  test_events_with_context.py  test_follow_signal.py  test_format.py  (+62 more)
cli/tests/bus/: test_alias_and_migration.py  test_bus_addressed.py  test_bus_convergence.py  test_bus_cursor.py  test_bus_cursor_addressed.py  test_bus_log.py  test_inbox_view.py  test_store_canon_flip.py  test_to_project.py
cli/tests/events/: parity_corpus.jsonl  test_emit_schema.py  test_event_emit_cli.py  test_megatron_emissions.py  test_migration.py  test_protocol_conformance.py  test_protocol_emit_cli.py  test_protocol_family.py  test_protocol_push.py  test_python_validator.py  test_rust_events_documented.py  test_schema_files.py  test_schema_manifest.py  test_validator_parity.py
cli/tests/fixtures/: mcp_channel_envelope.json  pr525-comment-3620363998.json
cli/tests/graph/: test_batched_member_selection.py  test_entry_status_computed.py  test_node_id.py  test_open_pr_selection.py
cli/tests/hooks/: test_init_target_state_skip_flags.py  test_register_session_start.py
cli/tests/integration/: test_abi_log.py  test_abi_plan_brief.py  test_autolaunch_group_child.py  test_backlog_alias.py  test_backlog_ready_json_flag.py  test_backlog_reconcile.py  test_backlog_selection_completed_guard.py  test_birth_hook_wiring.py  test_blueprint_mutation.py  test_carveout.py  test_claims_concurrency.py  test_claims_cross_impl.py  test_collision.py  test_consolidation_audit.py  test_defer.py  test_dispatch_global_rooting.py  test_doctor.py  test_done.py  test_e2e_hook_block.py  test_e2e_skill_rewrite.py  test_fno_log.py  test_graph_claim_filter.py  test_graph_cli.py  test_graph_hygiene.py  test_graph_status.py  test_health_monitor.py  test_idea_think_spawn_wiring.py  test_lane_slots_concurrency.py  test_list_misscoped.py  test_maintain_cli.py  test_marketplace_lint.py  test_megatron_e2e.py  test_megawalk_stub_callback.py  test_megawalk_tui.py  test_migrate_paths.py  test_migrate_source_field.py  test_mission_filter.py  test_no_hardcoded_paths.py  test_operator_single_doc.py  test_parent_filter.py  (+25 more)
cli/tests/lint/: test_append_lesson_candidate.py  test_check_pitfalls.py  test_check_preamble_budget.py  test_codex_workflow_posture.py  test_shellout_drift.py
cli/tests/mcp/: test_channel_wire.py  test_request_id.py  test_sidecar_lifecycle.py
cli/tests/megatron/: conftest.py  test_artifact.py  test_artifact_integration.py  test_brief.py  test_cli.py  test_completion_artifact.py  test_completion_contract.py  test_manifest.py  test_queue.py  test_skill_smoke.py  test_state.py  test_telemetry_anchor.py  test_validator.py
cli/tests/observer/: test_cli.py  test_fold.py
crates/fno/: Cargo.toml  README.md  build.rs
crates/fno-agents/: .gitignore  Cargo.toml  README.md  build.rs
crates/fno-bootstrap/: Cargo.toml  README.md
(+1711 files in other folders)
