[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fno"
dynamic = ["version"]
description = "Autonomous delivery pipeline for AI coding agents: think, plan, do, review, ship - from idea to merged PR."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Jason Noah Choi"}]
keywords = ["claude", "claude-code", "ai-agents", "autonomous", "workflow", "tdd", "code-review", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
# click is imported directly (fno/_lazy_group.py, the TyperGroup subclasses);
# declare it explicitly rather than relying on typer to pull it transitively --
# typer 0.26+ dropped the hard click dependency, so a fresh wheel install
# (cli/tests/smoke/test_build.sh) otherwise fails with ModuleNotFoundError: click.
dependencies = ["typer>=0.12", "click>=8.1", "rich>=13", "pydantic>=2", "filelock>=3.12", "pyyaml>=6", "tomli-w>=1.0", "psutil>=5.9"]

[project.urls]
Homepage = "https://github.com/bllshttng/footnote"
Repository = "https://github.com/bllshttng/footnote"
Issues = "https://github.com/bllshttng/footnote/issues"

# The Python control-plane CLI ships as `fno-py`, NOT `fno`: the Rust mux binary
# (crates/fno) owns `fno` on PATH and forwards every non-mux verb here by
# absolute path (`<uv tool dir>/fno/bin/fno-py`). Naming this `fno` too would
# make the two fight for the name on PATH (whichever `~/.local/bin` vs
# `~/.cargo/bin` wins), silently breaking `fno mux`. `fno-py` slots into the
# fno-<component> binary family (fno-agents*, fno-py) and is never typed by a
# user - they type `fno`, which routes. See crates/fno/src/bootstrap.rs::forward.
[project.scripts]
fno-py = "fno.cli:app"

[tool.hatch.version]
path = "src/fno/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fno"]

# The canonical events schema ships INSIDE the wheel as `fno/events/schema.yaml`
# - ordinary package data under `src/fno`, so both the wheel and the sdist carry
# it with no force-include machinery. The Python validator reads the sibling
# `schema.yaml` directly (events/__init__.py:_resolve_manifest_path). (x-122a
# follow-up: colocate the schema with its loader.)
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# Vendor the license texts INTO the sdist (at its root) so a wheel built FROM the
# sdist can still find them (the repo root - the license files - is not inside
# the sdist). The events schema needs no vendoring: it lives under `src/fno`, so
# it is already in the sdist. See hatch_build.py:license_sources. LICENSE +
# NOTICE live at the repo root (one level above this `cli/` build root), vendored
# under _license_vendor/ so the wheel ships them (US5; a license-less wheel hard-fails).
[tool.hatch.build.targets.sdist.force-include]
"../LICENSE" = "_license_vendor/LICENSE"
"../NOTICE" = "_license_vendor/NOTICE"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "mypy==2.1.0", "types-PyYAML>=6", "ruff>=0.4"]

[tool.ruff]
line-length = 100

# Explicit permissive base. Without one, `strict = true` in the override below
# hoists to a global default and leaks strict mode to all ~370 modules (x-18ac).
[tool.mypy]
python_version = "3.11"

# The path-config modules are held to mypy --strict. strict is expanded to its
# component flags rather than `strict = true`, because the meta-flag leaks
# globally from a per-module override (x-18ac). Keep this list == the strict set.
[[tool.mypy.overrides]]
module = [
    "fno.paths",
    "fno.config",
    "fno.config.*",
    "fno.config_io",
    "fno.setup.migrate_paths",
    "fno.setup.emit_shell",
]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
extra_checks = true

[tool.pytest.ini_options]
markers = [
    "slow_e2e: slow end-to-end integration tests; excluded from per-PR CI via '-m not slow_e2e'",
    "slow_e2e_25min: very slow e2e tests (up to 25-30 min); run in nightly CI only",
    "e2e: end-to-end tests requiring slower setup; run explicitly with -m e2e",
    "smoke: real-binary smoke tests (e.g. against real gemini); gated by GEMINI_SMOKE=1, excluded from CI",
]
