[package]
name = "fno"
# Keep in lockstep with crates/fno-agents and cli (Python). These ship as
# separate binaries but share one release number; born-at-0.3.0 was a scaffold
# typo, not a real version line. Protocol compat is PROTO_VERSION, not this.
version = "0.2.1"
edition = "2021"
# The mux pulls in tokio + alacritty_terminal + portable-pty, so this crate no
# longer targets the old pure-std 1.74 floor. 1.89 matches fno-agents (the
# in-tree floor these same dependencies already build on).
rust-version = "1.89"
description = "The fno terminal front door: a native terminal multiplexer (persistent server-owned PTYs, detach/reattach) plus the lazy bootstrapper that provisions and forwards to the fno Python CLI via uv."
license = "Apache-2.0"
repository = "https://github.com/bllshttng/footnote"
homepage = "https://github.com/bllshttng/footnote"
readme = "README.md"
keywords = ["fno", "multiplexer", "terminal", "pty", "mux"]
categories = ["command-line-utilities", "development-tools"]
publish = true

# The published binary is named `fno`: `cargo install fno` lands `~/.cargo/bin/fno`.
[[bin]]
name = "fno"
path = "src/main.rs"

[dependencies]
# `fno mux serve --web` (x-6a14): the read-only web bridge's HTTP + WebSocket
# surface. axum handles the untrusted-input HTTP parsing and WS handshake so
# the web-facing bridge does not hand-roll that security-sensitive code.
axum = { version = "0.8", features = ["ws"] }
# Same major versions as crates/fno-agents, which already builds this stack.
alacritty_terminal = "0.26"
crossterm = { version = "0.29", features = ["event-stream"] }
libc = "0.2"
portable-pty = "0.9"
# `pane wait --pattern RE`: regex over a pane's visible grid (script API).
regex = "1"
# Re-verify a picked answer's region fingerprint against the live grid before
# injecting (x-c929). Must match the daemon's hash byte-for-byte across
# processes, so the same content hash both sides use - not a per-process
# DefaultHasher.
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Read the flat `config.toml` (x-8526 stage 3): the interactive server reads
# `config.mux.*` directly (digest_overlay Pattern B) instead of shelling `fno`.
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "time",
    "macros",
    "signal",
    # x-4e2d: bounded, fail-open shell-out to `fno-agents digest` on attach.
    "process",
] }
